@startuml
package es.urjc.mastermind.views{
    class View
    class StartView
    class PlayView
    class ResumeView
    class BoardView
    class ResultView
    class PlayerView
    class MakerPlayerView
    class BreakerPlayerView
    class SecretCombinationView
    class ProposedCombinationView
    class ColorView
    class ErrorView
    class MessageView
}

package es.urjc.mastermind.models{
    class MasterMind
}

package es.urjc.utils{
    class Console
    class YesNoDialog
}

PlayerView <|--- MakerPlayerView
PlayerView <|--- BreakerPlayerView

View *---> MasterMind
View *---> StartView
View *---> PlayView
View *---> ResumeView

PlayView ..> BoardView
PlayView ..> PlayerView
BoardView ..> ResultView
ResultView ..> ProposedCombinationView
BreakerPlayerView ..> ProposedCombinationView
MakerPlayerView ..> SecretCombinationView
ProposedCombinationView ..> ColorView
BoardView ..> MessageView
ResultView ..> MessageView
ProposedCombinationView ..> MessageView
ProposedCombinationView ..> ErrorView
ResumeView ..> MessageView
MessageView ..> Console
MessageView ..> YesNoDialog
@enduml